--- a/Results/linear_models.ipynb
+++ b/Results/linear_models.ipynb
@@ -38,78 +38,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "ename": "ERROR",
+     "evalue": "Error in `[.data.frame`(full, var_list): undefined columns selected\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in `[.data.frame`(full, var_list): undefined columns selected\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
        "\t<li>'Pct_Chg'</li>\n",
-       "\t<li>'X1Y_Yield_d'</li>\n",
        "\t<li>'Exchange'</li>\n",
-       "\t<li>'lag4.X1Y_Yield_f'</li>\n",
-       "\t<li>'lag4.Exchange'</li>\n",
-       "\t<li>'lag4.X1Y_Yield_d'</li>\n",
-       "\t<li>'lag4.Int_d'</li>\n",
+       "\t<li>'lag10.Exchange'</li>\n",
+       "\t<li>'lag5.X1Y_Yield_f'</li>\n",
        "\t<li>'FER_f'</li>\n",
-       "\t<li>'lag3.Int_f'</li>\n",
-       "\t<li>'BOT_d'</li>\n",
-       "\t<li>'Infl_d'</li>\n",
+       "\t<li>'lag10.Infl_d'</li>\n",
+       "\t<li>'lag2.Infl_f'</li>\n",
+       "\t<li>'lag2.Exchange'</li>\n",
+       "\t<li>'lag10.X1Y_Yield_f'</li>\n",
+       "\t<li>'lag10.Int_f'</li>\n",
        "\t<li>'Int_d'</li>\n",
-       "\t<li>'lag3.X1Y_Yield_f'</li>\n",
+       "\t<li>'lag2.Int_f'</li>\n",
+       "\t<li>'lag6.Exchange'</li>\n",
+       "\t<li>'lag6.Infl_d'</li>\n",
+       "\t<li>'lag4.Int_d'</li>\n",
+       "\t<li>'lag10.Int_d'</li>\n",
+       "\t<li>'lag3.Int_f'</li>\n",
+       "\t<li>'lag2.X1Y_Yield_d'</li>\n",
+       "\t<li>'Int_f'</li>\n",
+       "\t<li>'lag3.Exchange'</li>\n",
+       "\t<li>'lag1.Exchange'</li>\n",
+       "\t<li>'GDPG_f'</li>\n",
+       "\t<li>'lag4.Infl_f'</li>\n",
+       "\t<li>'lag6.Infl_f'</li>\n",
+       "\t<li>'lag9.Infl_f'</li>\n",
+       "\t<li>'lag6.Int_d'</li>\n",
+       "\t<li>'lag5.X1Y_Yield_d'</li>\n",
+       "\t<li>'lag4.Int_f'</li>\n",
+       "\t<li>'lag7.Infl_f'</li>\n",
+       "\t<li>'lag8.Exchange'</li>\n",
+       "\t<li>'lag5.Infl_d'</li>\n",
+       "\t<li>'lag10.X1Y_Yield_d'</li>\n",
+       "\t<li>'BOT_f'</li>\n",
+       "\t<li>'lag5.Infl_f'</li>\n",
+       "\t<li>'lag2.Int_d'</li>\n",
+       "\t<li>'lag9.Int_d'</li>\n",
+       "\t<li>'lag6.X1Y_Yield_f'</li>\n",
+       "\t<li>'\n",
+       "'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
+       "\t<li>'+'</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 'Pct_Chg'\n",
-       "\\item 'X1Y_Yield_d'\n",
        "\\item 'Exchange'\n",
-       "\\item 'lag4.X1Y_Yield_f'\n",
-       "\\item 'lag4.Exchange'\n",
-       "\\item 'lag4.X1Y_Yield_d'\n",
-       "\\item 'lag4.Int_d'\n",
+       "\\item 'lag10.Exchange'\n",
+       "\\item 'lag5.X1Y_Yield_f'\n",
        "\\item 'FER_f'\n",
-       "\\item 'lag3.Int_f'\n",
-       "\\item 'BOT_d'\n",
-       "\\item 'Infl_d'\n",
+       "\\item 'lag10.Infl_d'\n",
+       "\\item 'lag2.Infl_f'\n",
+       "\\item 'lag2.Exchange'\n",
+       "\\item 'lag10.X1Y_Yield_f'\n",
+       "\\item 'lag10.Int_f'\n",
        "\\item 'Int_d'\n",
-       "\\item 'lag3.X1Y_Yield_f'\n",
+       "\\item 'lag2.Int_f'\n",
+       "\\item 'lag6.Exchange'\n",
+       "\\item 'lag6.Infl_d'\n",
+       "\\item 'lag4.Int_d'\n",
+       "\\item 'lag10.Int_d'\n",
+       "\\item 'lag3.Int_f'\n",
+       "\\item 'lag2.X1Y_Yield_d'\n",
+       "\\item 'Int_f'\n",
+       "\\item 'lag3.Exchange'\n",
+       "\\item 'lag1.Exchange'\n",
+       "\\item 'GDPG_f'\n",
+       "\\item 'lag4.Infl_f'\n",
+       "\\item 'lag6.Infl_f'\n",
+       "\\item 'lag9.Infl_f'\n",
+       "\\item 'lag6.Int_d'\n",
+       "\\item 'lag5.X1Y_Yield_d'\n",
+       "\\item 'lag4.Int_f'\n",
+       "\\item 'lag7.Infl_f'\n",
+       "\\item 'lag8.Exchange'\n",
+       "\\item 'lag5.Infl_d'\n",
+       "\\item 'lag10.X1Y_Yield_d'\n",
+       "\\item 'BOT_f'\n",
+       "\\item 'lag5.Infl_f'\n",
+       "\\item 'lag2.Int_d'\n",
+       "\\item 'lag9.Int_d'\n",
+       "\\item 'lag6.X1Y_Yield_f'\n",
+       "\\item '\n",
+       "'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
+       "\\item '+'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 'Pct_Chg'\n",
-       "2. 'X1Y_Yield_d'\n",
-       "3. 'Exchange'\n",
-       "4. 'lag4.X1Y_Yield_f'\n",
-       "5. 'lag4.Exchange'\n",
-       "6. 'lag4.X1Y_Yield_d'\n",
-       "7. 'lag4.Int_d'\n",
-       "8. 'FER_f'\n",
-       "9. 'lag3.Int_f'\n",
-       "10. 'BOT_d'\n",
-       "11. 'Infl_d'\n",
-       "12. 'Int_d'\n",
-       "13. 'lag3.X1Y_Yield_f'\n",
+       "2. 'Exchange'\n",
+       "3. 'lag10.Exchange'\n",
+       "4. 'lag5.X1Y_Yield_f'\n",
+       "5. 'FER_f'\n",
+       "6. 'lag10.Infl_d'\n",
+       "7. 'lag2.Infl_f'\n",
+       "8. 'lag2.Exchange'\n",
+       "9. 'lag10.X1Y_Yield_f'\n",
+       "10. 'lag10.Int_f'\n",
+       "11. 'Int_d'\n",
+       "12. 'lag2.Int_f'\n",
+       "13. 'lag6.Exchange'\n",
+       "14. 'lag6.Infl_d'\n",
+       "15. 'lag4.Int_d'\n",
+       "16. 'lag10.Int_d'\n",
+       "17. 'lag3.Int_f'\n",
+       "18. 'lag2.X1Y_Yield_d'\n",
+       "19. 'Int_f'\n",
+       "20. 'lag3.Exchange'\n",
+       "21. 'lag1.Exchange'\n",
+       "22. 'GDPG_f'\n",
+       "23. 'lag4.Infl_f'\n",
+       "24. 'lag6.Infl_f'\n",
+       "25. 'lag9.Infl_f'\n",
+       "26. 'lag6.Int_d'\n",
+       "27. 'lag5.X1Y_Yield_d'\n",
+       "28. 'lag4.Int_f'\n",
+       "29. 'lag7.Infl_f'\n",
+       "30. 'lag8.Exchange'\n",
+       "31. 'lag5.Infl_d'\n",
+       "32. 'lag10.X1Y_Yield_d'\n",
+       "33. 'BOT_f'\n",
+       "34. 'lag5.Infl_f'\n",
+       "35. 'lag2.Int_d'\n",
+       "36. 'lag9.Int_d'\n",
+       "37. 'lag6.X1Y_Yield_f'\n",
+       "38. '\n",
+       "'\n",
+       "39. '+'\n",
+       "40. '+'\n",
+       "41. '+'\n",
+       "42. '+'\n",
+       "43. '+'\n",
+       "44. '+'\n",
+       "45. '+'\n",
+       "46. '+'\n",
+       "47. '+'\n",
+       "48. '+'\n",
+       "49. '+'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1] \"Pct_Chg\"          \"X1Y_Yield_d\"      \"Exchange\"         \"lag4.X1Y_Yield_f\"\n",
-       " [5] \"lag4.Exchange\"    \"lag4.X1Y_Yield_d\" \"lag4.Int_d\"       \"FER_f\"           \n",
-       " [9] \"lag3.Int_f\"       \"BOT_d\"            \"Infl_d\"           \"Int_d\"           \n",
-       "[13] \"lag3.X1Y_Yield_f\""
+       " [1] \"Pct_Chg\"           \"Exchange\"          \"lag10.Exchange\"   \n",
+       " [4] \"lag5.X1Y_Yield_f\"  \"FER_f\"             \"lag10.Infl_d\"     \n",
+       " [7] \"lag2.Infl_f\"       \"lag2.Exchange\"     \"lag10.X1Y_Yield_f\"\n",
+       "[10] \"lag10.Int_f\"       \"Int_d\"             \"lag2.Int_f\"       \n",
+       "[13] \"lag6.Exchange\"     \"lag6.Infl_d\"       \"lag4.Int_d\"       \n",
+       "[16] \"lag10.Int_d\"       \"lag3.Int_f\"        \"lag2.X1Y_Yield_d\" \n",
+       "[19] \"Int_f\"             \"lag3.Exchange\"     \"lag1.Exchange\"    \n",
+       "[22] \"GDPG_f\"            \"lag4.Infl_f\"       \"lag6.Infl_f\"      \n",
+       "[25] \"lag9.Infl_f\"       \"lag6.Int_d\"        \"lag5.X1Y_Yield_d\" \n",
+       "[28] \"lag4.Int_f\"        \"lag7.Infl_f\"       \"lag8.Exchange\"    \n",
+       "[31] \"lag5.Infl_d\"       \"lag10.X1Y_Yield_d\" \"BOT_f\"            \n",
+       "[34] \"lag5.Infl_f\"       \"lag2.Int_d\"        \"lag9.Int_d\"       \n",
+       "[37] \"lag6.X1Y_Yield_f\"  \"\\n\"                \"+\"                \n",
+       "[40] \"+\"                 \"+\"                 \"+\"                \n",
+       "[43] \"+\"                 \"+\"                 \"+\"                \n",
+       "[46] \"+\"                 \"+\"                 \"+\"                \n",
+       "[49] \"+\"                "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "country <- 'korea'\n",
+    "country <- 'canada'\n",
     "full <- read.csv(paste(country,'_full.csv',sep=''))\n",
     "full <- full[,-1]\n",
     "rownames(full) <- 1:nrow(full)\n",
