--- a/Results/lag_graph.ipynb
+++ b/Results/lag_graph.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        "  2 "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,7 +118,7 @@
        "  2 "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,6 +129,7 @@
     "        group = Country, colour = Country))+\n",
     "    geom_line() +\n",
     "    xlab('Lag') + \n",
+    "    ylab('Mean Testing Error') +\n",
     "    theme(legend.justification = c(1,1), legend.position = c(1,1)) +\n",
     "    scale_x_continuous(breaks = lag)\n",
     "dev.off()\n",
@@ -138,6 +139,7 @@
     "        group = Country, colour = Country))+\n",
     "    geom_line() +\n",
     "    xlab('Lag') + \n",
+    "    ylab('Mean Testing Error') +\n",
     "    theme(legend.justification = c(1,1), legend.position = c(1,1)) + \n",
     "    scale_x_continuous(breaks = lag2)\n",
     "dev.off()"
