--- a/Paper/exchange_rates.tex
+++ b/Paper/exchange_rates.tex
@@ -86,7 +86,7 @@ Matthew Robinson \\
 \section{Introduction}
 International business involves considerable risk. This is especially true for manufacturers, who often make production decisions well in advance of delivery dates. Consider the position of an airline that is preparing to expand its fleet. This airline might place an order for a passenger jet that will not be completed for a year or more, with payment due upon delivery of the jet. If the buyer is American and the manufacturer is also American, this is not a problem. All of the manufacturer's production costs will be valued in US dollars, and the customer will pay in US dollars.
 \par{} In contrast, consider the situation if the buyer is Canadian and the manufacturer is American. Since the manufacturer is American, the Canadian firm must pay for the jet in US dollars. Suppose the value of the US dollar appreciates 10\% relative to the Canadian dollar while the American firm is filling the order. Then, when the Canadian firm pays for the jet, it is 10\% more expensive in terms of Canadian dollars than when it ordered it. If the movement were in the opposite direction, the manufacturer would receive 10\% fewer US dollars for the jet than it expected when it was ordered. Clearly, both firms would be interested in predicting adverse currency movements in advance, and may be interested in writing expected future currency valuations into contracts. 
-\par{} With this application in mind, we consider the following question: can we predict the exchange rate after one year for the top five US trading partners during the period of 1972-2015 using monthly macroeconomic data? The variables we will use to predict the exchange rate include the current exchange rate, interest rate, inflation rate and government bond yield for both countries, and several variables related to international trade and financial flows. The remainder of this section will provide an overview of relevant economic theory, a summary of past statistical research on exchange rates and an overview of the data set. In the following section, we perform exploratory data analysis to develop a basic understanding of the behavior of the time series and discern which variables are useful as predictors. Next, we develop several models for predicting exchange rates and compare their effectiveness. This paper considers both linear models and tree based approaches. In developing statistical models, the primary focus is on incorporating time series techniques and variable selection. In the conclusion, we determine the most effective method for predicting exchange rates, evaluate its impact on business decisions and suggest possible directions for future research.
+\par{} With this application in mind, we consider the following question: can we predict the exchange rate after one year for the top five US trading partners during the period of 1972-2015 using monthly macroeconomic data? The variables we will use to predict the exchange rate include the current exchange rate, interest rate, inflation rate and government bond yield for both countries, and several variables related to international trade and financial flows. The remainder of this section will provide an overview of relevant economic theory, a summary of past statistical research on exchange rates and an overview of the data set. In the following section, we perform exploratory data analysis to develop a basic understanding of the behavior of the time series and discern which variables are useful as predictors. Next, we develop several models for predicting exchange rates and compare their effectiveness. This paper considers both linear models and tree based approaches. In developing statistical models, the primary focus is on incorporating time series techniques and variable selection. In the conclusion, we determine that linear regression with lagged variables is the most effective method for predicting exchange rates, evaluate the impact of this result on business decisions and suggest possible directions for future research.
 
 \subsection{Related Work}
 Equilibrium in foreign exchange markets is a well developed component of classical economic theory. Classical models rest on two fundamental ideas. The first is that foreign exchange markets achieve equilibrium when the rate of return on deposits is the same across all currencies. The idea that investors will be indifferent between bank deposits denominated in different currencies is known as interest rate parity. The second is that the price of goods will be the same when valued in different currencies. The notion that a basket of goods should cost the same across all currencies is known as purchasing power parity.
@@ -98,13 +98,13 @@ e_{t+1} = e_{t} \left( \frac{1+i_{d}}{1+i_{f}} \right)
 \begin{equation}
 \frac{e_{t+1}-e_{t}}{e_{t}} = \frac{1+\pi_{d}}{1+\pi{f}} - 1
 \end{equation}
-\par{} In the literature, Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict interest rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk, which predicts no change in the exchange rate, outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
-\par{} Statisticians have developed several approaches to predicting exchange rates. A model proposed by Hsiech suggests that there is little linear dependence in exchange rate movements, but strong nonlinear dependence. On the other hand, Meese and Rose showed that nonlinear estimators to do not significantly improve popular models for predicting exchange rates, and that these models do not outperform a random walk. All of these models incorporate macroeconomic variables, such as interest rates and inflation rates. Lyons and Evans produced more accurate models by incorporating microeconomic variables. They augmented previously used linear models with a new variable, order flow, which is the net of buyer and seller initiated orders. This model accurately predicted 60\% of daily changes in the exchange rate between the German Mark and the US dollar. Some researchers have also modeled exchange rates using more sophisticated machine learning techniques. Panda and Narasimhan showed that neural networks outperform both a random walk and linear autoregressive models when predicting weekly changes in Indian rupee/US dollar exchange rates.
-\par{} Past statistical research on exchange rates has largely focused on financial applications. Predicting daily or weekly exchange rate movements primarily benefits financial institutions that participate in foreign exchange markets. The goal of these firms is to profit by placing bets on currency movements. By contrast, this paper considers the problem from the perspective of an importer or exporter. Their goal is to predict medium term currency movements in order to accurately predict future costs and revenues. This helps them make more informed business decisions. Considering the medium run time horizon and monthly data makes the problem more feasible from an economic perspective. It also makes the application less ripe for more complicated prediction techniques, such as neural networks, because the number of observations and feature space are both small. Due to these considerations, this paper will focus primarily on traditional time series techniques and variable selection.
+\par{} In the literature, Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict exchange rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk, which predicts no change in the exchange rate, outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
+\par{} Statisticians have developed several approaches for predicting exchange rates. A model proposed by Hsiech suggests that there is little linear dependence in exchange rate movements, but strong nonlinear dependence. On the other hand, Meese and Rose showed that nonlinear estimators to do not significantly improve popular models for predicting exchange rates, and that these models do not outperform a random walk. All of these models incorporate macroeconomic variables, such as interest rates and inflation rates. Lyons and Evans produced more accurate models by incorporating microeconomic variables. They augmented previously used linear models with a new variable, order flow, which is the net of buyer and seller initiated orders. This model accurately predicted 60\% of daily changes in the exchange rate between the German Mark and the US dollar. Some researchers have also modeled exchange rates using more sophisticated machine learning techniques. Panda and Narasimhan showed that neural networks outperform both a random walk and linear autoregressive models when predicting weekly changes in the Indian rupee/US dollar exchange rate.
+\par{} Past statistical research on exchange rates has largely focused on financial applications. Predicting daily or weekly exchange rate movements primarily benefits financial institutions that participate in foreign exchange markets. The goal of these firms is to profit by placing bets on currency movements. By contrast, this paper considers the problem from the perspective of an importer or exporter. Their goal is to predict medium term currency movements in order to accurately predict future costs and revenues. This helps them make more informed business decisions. Considering the medium run time horizon and using monthly data makes the problem more feasible from an economic perspective. It also makes the application less ripe for more complicated prediction techniques, such as neural networks, because the number of observations and feature space are both small. Due to these considerations, this paper will focus primarily on traditional time series techniques and variable selection.
 
 \subsection{Data}
-This paper restricts its attention to changes in the exchange rate between the United States and its five biggest trading partners, excluding China. These trading partners are Europe, Canada, Mexico, Japan and South Korea. Europe in this context refers to the 19 countries that belong to the eurozone. Since they share monetary policy, they will be treated as a single unit for the purposes of this paper. China is excluded because it fixes its exchange rate. Because of this, its exchange rate is determined by government policy rather than economic variables. The observations for all countries end in December 2015. The start date for the time series is 1972 for Japan, 1985 for Korea, 1990 for Canada, 1994 for Mexico and 2000 for the Euro. Japan begins in 1972 because that date marks the end of the gold standard and the beginning of the modern era of free floating currencies. For each other country, the start date was chosen as the earliest date for which data on all of the macroeconomic predictors was available. 
-\par{} The data used in this paper was collected entirely by central banks and compiled by Quandl, an economic data repository. The primary variables of interest in the data set are the exchange rate, inflation rate, interest rate and the yield on one year government bonds. These are the variables that appear in the interest rate and purchasing power parity models. All exchange rates are valued as the amount of foreign currency needed to trade for one US dollar. The inflation rate measures the annualized percent change in the consumer price index for each country. The interest rate is the interbank lending rate set by the central bank for the currency in question. For the United States, this is the federal funds rate.  Other variables in the data set include an area's balance of trade, current account, foreign exchange reserves and other factors related to international financial flows. These variables were measured both for the United States and each currency pairing. Each variable is measured monthly, with the exception of GDP growth, current account balance and foreign direct investment. These variables are measured quarterly. In order to align this data with the rest of the data set, values for the intervening two months between each quarter were interpolated using cubic splines.
+This paper restricts its attention to changes in the exchange rate between the United States and its five biggest trading partners, excluding China. These trading partners are Europe, Canada, Mexico, Japan and South Korea. Europe in this context refers to the 19 countries that belong to the eurozone. Since they share a common monetary policy, they will be treated as a single unit for the purposes of this paper. China is excluded because it fixes its exchange rate. Because of this, its exchange rate is determined by government policy rather than economic variables. The observations for all countries end in December 2015. The start date for the time series is 1972 for Japan, 1985 for Korea, 1990 for Canada, 1994 for Mexico and 2000 for the Euro. Japan begins in 1972 because that date marks the end of the gold standard and the beginning of the modern era of free floating currencies. For each other country, the start date was chosen as the earliest date for which data on all of the macroeconomic predictors was available. 
+\par{} The data used in this paper was collected entirely by central banks and compiled by Quandl, an economic data repository. The primary variables of interest in the data set are the exchange rate, inflation rate, interest rate and the yield on one year government bonds. These are the variables that appear in the interest rate and purchasing power parity models. All exchange rates are valued as the amount of foreign currency needed to trade for one US dollar. The inflation rate measures the annualized percent change in the consumer price index for each country. The interest rate is the interbank lending rate set by the central bank for the currency in question. For the United States, this is the federal funds rate.  Other variables in the data set include an area's balance of trade, current account, foreign exchange reserves and other factors related to international financial flows. These variables were measured both for the United States and each trading partner. Each variable is measured monthly, with the exception of GDP growth, current account balance and foreign direct investment. These variables are measured quarterly. In order to align these variables with the rest of the data set, values for the intervening two months between each quarter were interpolated using cubic splines.
 
 \section{Exploratory Data Analysis}
 
@@ -180,6 +180,13 @@ Time series data often exhibits autocorrelation. Autocorrelation refers to corre
 
 \subsection{Variables}
 
+\begin{figure}
+\centering
+\caption{Balance of Trade and Foreign Exchange Reserves Over Time for Japan}
+\includegraphics[scale=0.45]{japan_plot.pdf}
+\label{fig:autocorrelation}
+\end{figure}
+
 In order to view the correlations between variables correlation matrices were built for each trading partner. The highest correlation between variables observed was with Japan and it was a negative correlation of 0.9 between domestic balance of trade and foreign exchange reserves of Japanese currency held by other countries. Other notably high correlations observed occurred between foreign and domestic interest rates and inflation rates for multiple trading partners. It was also observed that foreign exchange reserves and balance of trade were correlated with interest rates both foreign and domestic. Most of these correlations were between 0.6 and 0.8. All other variables had low correlation with each other with most being under 0.3.   
 
 \section{Methods}
@@ -238,7 +245,7 @@ An exchange rate prediction model was fitted for each of the methods described a
 %\label{fig:ForestLag2}
 %\end{figure}
 
-We determined an appropriate lag by comparing the performance of a standard linear regression model across a variety of lags. In order to find the simplest model specification that provides accurate predictions, we chose the lag by finding the point at which including an additional month of lag stops improving the performance of the model. We accomplished this by plotting the mean training error of the model as a function of the lag for each country. These plots appear in Figures ~\ref{fig:lag1}, ~\ref{fig:lag2}, ~\ref{fig:ForestLag1}, and ~\ref{fig:ForestLag2}. 
+We determined an appropriate lag by comparing the performance of a standard linear regression model across a variety of lags. In order to find the simplest model specification that provides accurate predictions, we chose the lag by finding the point at which including an additional month of lag stops improving the performance of the model. We accomplished this by plotting the mean training error of the model as a function of the lag for each country. These plots appear in Figures ~\ref{fig:lag1} and ~\ref{fig:lag2}. %, ~\ref{fig:ForestLag1}, and ~\ref{fig:ForestLag2}. 
 
 \par{} The appropriate lag varies by country for linear models. Noticeable improvements in the performance of the model cease after month four for Canada and month five for Mexico. The results justify including lagged variables out to nine months for Europe, Japan and Korea. In the case of Korea, the decision to include a lengthy lag on the variables is less clear cut, since the model also performs well with shorter lags. However, the mean testing error decreases by a factor of two after the ninth month is included, making the increased complexity of the model worthwhile.
 \par{} Including lagged variables results in a large number of possible predictors for each model. Using the lags chosen above, there are 42 possible predictors for the Canada model, 49 for the Mexico model and 77 each for the Europe, Japan and Korea models. The variables used to predict the percent change in the exchange rate were chosen by forward stepwise variable selection, as described in the methods section. These variables and their lags appear in the appendix. Of note is that at least 9 of the 12 variables in the data set appear in each of the final models chosen by forward stepwise variable selection. In addition, each variable appeared in at least two of the models. This indicates that each variable is useful as a predictor of exchange rates, as economic theory suggests they should be.
